hw 18 plus general updates

--- a/templates/student/s_dashboard.html
+++ b/templates/student/s_dashboard.html
@@ -53,5 +53,12 @@
 <a href="{% url 'lessons' student_id=student_id %}" style="padding: 10px 15px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">
     View My Lessons
 </a>
+<br>
+<br>
+<br>
+<a href="/profile/"
+   style="padding: 10px 15px; background-color: #4da3ff; color: white; text-decoration: none; border-radius: 5px;">
+    My Data
+</a>
 </body>
 </html>
