--- a/templates/teacher/t_dashboard.html
+++ b/templates/teacher/t_dashboard.html
@@ -15,7 +15,11 @@
     <li>No lessons yet.</li>
 {% endfor %}
 </ul>
-
+<br>
+<a href="/profile/"
+   style="padding: 10px 15px; background-color: #4da3ff; color: white; text-decoration: none; border-radius: 5px;">
+    My Data
+</a>
 
 </body>
 </html>
