--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,11 @@
   <div>
     <button type="submit">Login</button>
   </div>
+  <br><br>
+<p>
+  Not registered yet?
+  <a href="/register/">Register</a>
+</p>
 </form>
 </body>
 </html>
