--- a/templates/register.html
+++ b/templates/register.html
@@ -41,6 +41,16 @@
   <br>
 
   <div>
+    <label for="role">I am:</label>
+    <select id="role" name="role" required>
+      <option value="">-- Select --</option>
+      <option value="student">Student</option>
+      <option value="teacher">Teacher</option>
+    </select>
+  </div>
+  <br>
+
+  <div>
     <button type="submit">Register</button>
   </div>
 </form>
